<resources>
    <string name="app_name">Be xato</string>
    <string name="bexatobotuz">Bexatobotuz</string>
    <string name="be">Be</string>
    <string name="xato">xato</string>
    <string name="lotin">Lotin</string>
    <string name="krill">Кирилл</string>
    <string name="internet_aloqasini_tekshiring">Internet aloqasini tekshiring</string>
    <string name="lotin_text">Lotin text</string>
    <string name="output_text">Output text</string>
    <string name="main">Asosiy</string>
    <string name="history">Tarix</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_info">Ushbu bexato ilovasi orqali siz matnlarni kirillchadan lotinchaga va lotinchadan kirillchaga o\'g\'irishingiz mumkin</string>
    <string name="info_telegram_bot">Telegram botimiz</string>
    <string name="link_web_bexato">bexatobot.uz</string>
    <string name="info_web_bexato">Web saytimiz</string>
    <string name="link_telegram_bot">\@bexatobot</string>
    <string name="url_telegram_bot">https://t.me/bexatobot</string>
    <string name="url_web_bexato">https://bexatobot.uz</string>
    <string name="k_low">қ</string>
    <string name="k_up">Қ</string>
    <string name="g_low">ғ</string>
    <string name="g_up">Ғ</string>
    <string name="o_low">ў</string>
    <string name="o_up">Ў</string>
</resources>