<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.translate.TranslateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:gravity="center_vertical"
                android:padding="8dp">


                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="6dp"
                    android:src="@drawable/ic_history"
                    app:tint="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_bexato"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/be"
                            android:textColor="@color/colorSecondaryDark"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/xato"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_info"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="6dp"
                    android:src="@drawable/ic_info_square"
                    app:tint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_card"
                android:gravity="center"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/first_translator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/lotin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_replace_translator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_round_swap_horiz" />

                <TextView
                    android:id="@+id/second_translator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/krill"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="start"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                android:text="@string/internet_aloqasini_tekshiring"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_refresh"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_refresh"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorSecondaryDark"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/body_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_card"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="120dp"
                        android:background="@drawable/background_text_view"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/lotin_text"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray2"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <ImageView
                            android:id="@+id/img_paste"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:padding="8dp"
                            android:src="@drawable/ic_paste"
                            app:tint="@color/colorPrimary" />

                        <ImageView
                            android:id="@+id/img_clear"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:padding="8dp"
                            android:src="@drawable/ic_delete"
                            app:tint="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_card"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_output_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_text_view"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingHorizontal="8dp"
                        android:minHeight="120dp"
                        android:paddingVertical="8dp"
                        android:text="@string/output_text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray2"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <ImageView
                            android:id="@+id/img_copy"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:padding="8dp"
                            android:src="@drawable/ic_copy_outline" />

                        <ImageView
                            android:id="@+id/img_share"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:padding="8dp"
                            android:src="@drawable/ic_share_fill" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical|right"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:id="@+id/keyboard_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:weightSum="6">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_keyboard_k"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_back_light"
                    android:text="@string/k_low"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_keyboard_k_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_back_light"
                    android:text="@string/k_up"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_keyboard_g"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_back_light"
                    android:text="@string/g_low"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_keyboard_g_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_back_light"
                    android:text="@string/g_up"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_keyboard_o"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_back_light"
                    android:text="@string/o_low"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_keyboard_o_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_back_light"
                    android:text="@string/o_up"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_keyboard_more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="16dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:contentPadding="12dp">

            <ImageView
                android:id="@+id/keyboard_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_back_light" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>